--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,16 @@
-*.py[co]
-
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
 bin
+build
+dist
+include
+lib
+man
+nosetests.xml
+src
 var
-sdist
-develop-eggs
-.installed.cfg
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-
-#Translations
-*.mo
-
-#Mr Developer
-.mr.developer.cfg
+.*
+*.pyc
+*.egg-info
+*.egg
+*.swp
+*~
+docs/_build
