--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ notifications:
   email:
     - hschlichting@mozilla.com
 
+before_install:
+    - sudo apt-get -q update >/dev/null 2>&1
+    - sudo apt-get -q install libevent-dev libpcre3-dev >/dev/null 2>&1
+
 install:
     - make build
 
